--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".page.MovieListActivity"/>
+        <activity android:name=".page.MovieGrossActivity"/>
     </application>
 
 </manifest>
