--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".page.HomeActivity"/>
         <activity android:name=".page.MovieListActivity"/>
         <activity android:name=".page.MovieGrossActivity"/>
+        <activity android:name=".page.CompareActivity"/>
     </application>
 
 </manifest>
