--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
     <!-- *****samsung fingerprint sdk permission******* -->
     <uses-permission android:name="com.samsung.android.providers.context.permission.WRITE_USE_APP_FEATURE_SURVEY" />
 
+    <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
