--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.king.app.gross">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <!-- *****往sdcard中写入数据的权限******* -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -20,6 +21,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/CustomActionBarTheme"
         android:name=".base.MApplication">
         <meta-data
@@ -45,6 +47,18 @@
         <activity android:name=".page.MovieListActivity"/>
         <activity android:name=".page.MovieGrossActivity"/>
         <activity android:name=".page.CompareActivity"/>
+        <activity android:name=".page.MarketActivity"/>
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.king.app.gross.fileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
     </application>
 
 </manifest>
