--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".page.CompareActivity"/>
         <activity android:name=".page.MarketActivity"/>
         <activity android:name=".page.EditMarketGrossActivity"/>
+        <activity android:name=".page.MarketRankActivity"/>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
