--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,8 @@
         <activity android:name=".page.MarketActivity"/>
         <activity android:name=".page.EditMarketGrossActivity"/>
         <activity android:name=".page.MarketRankActivity"/>
+        <activity android:name=".page.FullChartActivity"
+            android:screenOrientation="landscape"/>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
